@@ -1,3 +1,8 @@
+2007-05-13  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-themes.c: (themes_init), (theme_thumbnail_generate),
+	(theme_thumbnail_func): fix asynchronous thumbnail generation
+
 2007-05-13  Thomas Wood  <thos@gnome.org>
 
 	* appearance-style.c: Add colour scheme functions
